--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "film-catalog": {
+    "movies": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular": {
@@ -19,7 +19,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/film-catalog",
+            "outputPath": "dist/movies",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -62,10 +62,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "film-catalog:build:production"
+              "buildTarget": "movies:build:production"
             },
             "development": {
-              "buildTarget": "film-catalog:build:development"
+              "buildTarget": "movies:build:development"
             }
           },
           "defaultConfiguration": "development"
