--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "json-server": "^1.0.0-beta.3",
     "lucide-angular": "^0.542.0",
+    "ngx-sonner": "^3.1.0",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.3.1",
     "tslib": "^2.3.0",
